--- a/notebooks/Semantic_Analysis.ipynb
+++ b/notebooks/Semantic_Analysis.ipynb
@@ -40,7 +40,7 @@
     "save_dir = \"/cluster/work/zhang/kamara/syntax-shap\"\n",
     "\n",
     "dataset = \"negation\"\n",
-    "model_name = \"gpt2\"\n",
+    "model_name = \"mistral\"\n",
     "threshold_ = 0.5\n",
     "seed_ = 0\n"
    ]
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +108,7 @@
        "      <th>token_ids</th>\n",
        "      <th>explanation</th>\n",
        "      <th>algorithm</th>\n",
+       "      <th>n_token</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -115,46 +116,51 @@
        "      <th>0</th>\n",
        "      <td>172</td>\n",
        "      <td>A bat flies without</td>\n",
-       "      <td>[A,  bat,  flies,  without]</td>\n",
-       "      <td>[32, 7365, 17607, 1231]</td>\n",
-       "      <td>[0.20492837, 0.86268157, 1.2397658, 5.432964]</td>\n",
+       "      <td>[&lt;s&gt;, A, bat, flies, without]</td>\n",
+       "      <td>[1, 330, 9753, 28030, 1671]</td>\n",
+       "      <td>[-1.4712268, -0.89945465, 0.36907044, -1.5608546]</td>\n",
        "      <td>svsampling</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>464</td>\n",
        "      <td>A dolphin sees without</td>\n",
-       "      <td>[A,  dolphin,  sees,  without]</td>\n",
-       "      <td>[32, 44136, 7224, 1231]</td>\n",
-       "      <td>[-0.30600104, 1.1881001, 0.8500203, 7.6858444]</td>\n",
+       "      <td>[&lt;s&gt;, A, dol, ph, in, sees, without]</td>\n",
+       "      <td>[1, 330, 13824, 721, 262, 12477, 1671]</td>\n",
+       "      <td>[-0.96523803, -0.6508136, 0.07779602, -0.12909...</td>\n",
        "      <td>svsampling</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>196</td>\n",
        "      <td>A monkey walks without</td>\n",
-       "      <td>[A,  monkey,  walks,  without]</td>\n",
-       "      <td>[32, 21657, 11114, 1231]</td>\n",
-       "      <td>[0.13439833, 0.54848653, 1.3802226, 5.3254786]</td>\n",
+       "      <td>[&lt;s&gt;, A, mon, key, walks, without]</td>\n",
+       "      <td>[1, 330, 1326, 1499, 16830, 1671]</td>\n",
+       "      <td>[-0.8556219, -0.2594735, -0.18704407, -0.40751...</td>\n",
        "      <td>svsampling</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>414</td>\n",
        "      <td>Peter is a groom without a</td>\n",
-       "      <td>[Peter,  is,  a,  groom,  without,  a]</td>\n",
-       "      <td>[19727, 318, 257, 32443, 1231, 257]</td>\n",
-       "      <td>[0.16461116, -0.077765256, -0.7361093, 12.1213...</td>\n",
+       "      <td>[&lt;s&gt;, Peter, is, a, groom, without, a]</td>\n",
+       "      <td>[1, 5966, 349, 264, 28583, 1671, 264]</td>\n",
+       "      <td>[-0.56217575, -0.6185286, -0.37080443, -0.0807...</td>\n",
        "      <td>svsampling</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>530</td>\n",
        "      <td>A person has no</td>\n",
-       "      <td>[A,  person,  has,  no]</td>\n",
-       "      <td>[32, 1048, 468, 645]</td>\n",
-       "      <td>[-0.5390133, 1.4203396, 2.948345, 5.008343]</td>\n",
+       "      <td>[&lt;s&gt;, A, person, has, no]</td>\n",
+       "      <td>[1, 330, 1338, 659, 708]</td>\n",
+       "      <td>[-0.69703627, -0.8620669, -0.5382457, -1.1627676]</td>\n",
        "      <td>svsampling</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -164,55 +170,61 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3733</th>\n",
+       "      <th>3199</th>\n",
        "      <td>70</td>\n",
        "      <td>Anaheim is not located in</td>\n",
-       "      <td>[An, a, heim,  is,  not,  located,  in]</td>\n",
-       "      <td>[2025, 64, 9096, 318, 407, 5140, 287]</td>\n",
-       "      <td>[0.041868935645878076, -0.04394437402128172, -...</td>\n",
+       "      <td>[&lt;s&gt;, Ana, heim, is, not, located, in]</td>\n",
+       "      <td>[1, 23103, 9733, 349, 459, 5651, 297]</td>\n",
+       "      <td>[0.1733647529316892, 0.04061554155962106, -0.0...</td>\n",
        "      <td>syntax</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3734</th>\n",
+       "      <th>3200</th>\n",
        "      <td>277</td>\n",
        "      <td>A chicken has</td>\n",
-       "      <td>[A,  chicken,  has]</td>\n",
-       "      <td>[32, 9015, 468]</td>\n",
-       "      <td>[0.11819464399959015, 0.058800764092091236, 0....</td>\n",
+       "      <td>[&lt;s&gt;, A, chicken, has]</td>\n",
+       "      <td>[1, 330, 13088, 659]</td>\n",
+       "      <td>[-0.20917350576438654, -0.49107935620356624, -...</td>\n",
        "      <td>syntax</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3735</th>\n",
+       "      <th>3201</th>\n",
        "      <td>9</td>\n",
        "      <td>A dad is a</td>\n",
-       "      <td>[A,  dad,  is,  a]</td>\n",
-       "      <td>[32, 9955, 318, 257]</td>\n",
-       "      <td>[0.1288646405127117, 0.1445384307001051, 0.293...</td>\n",
+       "      <td>[&lt;s&gt;, A, dad, is, a]</td>\n",
+       "      <td>[1, 330, 9493, 349, 264]</td>\n",
+       "      <td>[0.07411319335176675, -0.03953009075144326, 0....</td>\n",
        "      <td>syntax</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3736</th>\n",
+       "      <th>3202</th>\n",
        "      <td>359</td>\n",
        "      <td>Kate is a aunt with a</td>\n",
-       "      <td>[Kate,  is,  a,  aunt,  with,  a]</td>\n",
-       "      <td>[45087, 318, 257, 25949, 351, 257]</td>\n",
-       "      <td>[0.11519224832480825, 0.0924940265072175, -0.0...</td>\n",
+       "      <td>[&lt;s&gt;, Kate, is, a, aunt, with, a]</td>\n",
+       "      <td>[1, 14976, 349, 264, 23785, 395, 264]</td>\n",
+       "      <td>[-0.043608159481715016, 0.12664847689797767, 0...</td>\n",
        "      <td>syntax</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3737</th>\n",
+       "      <th>3203</th>\n",
        "      <td>192</td>\n",
        "      <td>An elephant walks without</td>\n",
-       "      <td>[An,  elephant,  walks,  without]</td>\n",
-       "      <td>[2025, 20950, 11114, 1231]</td>\n",
-       "      <td>[0.12952572043228658, 0.21844777373972638, 0.0...</td>\n",
+       "      <td>[&lt;s&gt;, An, ele, phant, walks, without]</td>\n",
+       "      <td>[1, 1094, 5939, 17953, 16830, 1671]</td>\n",
+       "      <td>[0.3255281651227965, 0.06137447188101971, 0.08...</td>\n",
        "      <td>syntax</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3738 rows × 6 columns</p>\n",
+       "<p>3204 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -223,55 +235,55 @@
        "3          414  Peter is a groom without a   \n",
        "4          530             A person has no   \n",
        "...        ...                         ...   \n",
-       "3733        70   Anaheim is not located in   \n",
-       "3734       277               A chicken has   \n",
-       "3735         9                  A dad is a   \n",
-       "3736       359       Kate is a aunt with a   \n",
-       "3737       192   An elephant walks without   \n",
+       "3199        70   Anaheim is not located in   \n",
+       "3200       277               A chicken has   \n",
+       "3201         9                  A dad is a   \n",
+       "3202       359       Kate is a aunt with a   \n",
+       "3203       192   An elephant walks without   \n",
        "\n",
-       "                                       tokens  \\\n",
-       "0                 [A,  bat,  flies,  without]   \n",
-       "1              [A,  dolphin,  sees,  without]   \n",
-       "2              [A,  monkey,  walks,  without]   \n",
-       "3      [Peter,  is,  a,  groom,  without,  a]   \n",
-       "4                     [A,  person,  has,  no]   \n",
-       "...                                       ...   \n",
-       "3733  [An, a, heim,  is,  not,  located,  in]   \n",
-       "3734                      [A,  chicken,  has]   \n",
-       "3735                       [A,  dad,  is,  a]   \n",
-       "3736        [Kate,  is,  a,  aunt,  with,  a]   \n",
-       "3737        [An,  elephant,  walks,  without]   \n",
+       "                                      tokens  \\\n",
+       "0              [<s>, A, bat, flies, without]   \n",
+       "1       [<s>, A, dol, ph, in, sees, without]   \n",
+       "2         [<s>, A, mon, key, walks, without]   \n",
+       "3     [<s>, Peter, is, a, groom, without, a]   \n",
+       "4                  [<s>, A, person, has, no]   \n",
+       "...                                      ...   \n",
+       "3199  [<s>, Ana, heim, is, not, located, in]   \n",
+       "3200                  [<s>, A, chicken, has]   \n",
+       "3201                    [<s>, A, dad, is, a]   \n",
+       "3202       [<s>, Kate, is, a, aunt, with, a]   \n",
+       "3203   [<s>, An, ele, phant, walks, without]   \n",
        "\n",
-       "                                  token_ids  \\\n",
-       "0                   [32, 7365, 17607, 1231]   \n",
-       "1                   [32, 44136, 7224, 1231]   \n",
-       "2                  [32, 21657, 11114, 1231]   \n",
-       "3       [19727, 318, 257, 32443, 1231, 257]   \n",
-       "4                      [32, 1048, 468, 645]   \n",
-       "...                                     ...   \n",
-       "3733  [2025, 64, 9096, 318, 407, 5140, 287]   \n",
-       "3734                        [32, 9015, 468]   \n",
-       "3735                   [32, 9955, 318, 257]   \n",
-       "3736     [45087, 318, 257, 25949, 351, 257]   \n",
-       "3737             [2025, 20950, 11114, 1231]   \n",
+       "                                   token_ids  \\\n",
+       "0                [1, 330, 9753, 28030, 1671]   \n",
+       "1     [1, 330, 13824, 721, 262, 12477, 1671]   \n",
+       "2          [1, 330, 1326, 1499, 16830, 1671]   \n",
+       "3      [1, 5966, 349, 264, 28583, 1671, 264]   \n",
+       "4                   [1, 330, 1338, 659, 708]   \n",
+       "...                                      ...   \n",
+       "3199   [1, 23103, 9733, 349, 459, 5651, 297]   \n",
+       "3200                    [1, 330, 13088, 659]   \n",
+       "3201                [1, 330, 9493, 349, 264]   \n",
+       "3202   [1, 14976, 349, 264, 23785, 395, 264]   \n",
+       "3203     [1, 1094, 5939, 17953, 16830, 1671]   \n",
        "\n",
-       "                                            explanation   algorithm  \n",
-       "0         [0.20492837, 0.86268157, 1.2397658, 5.432964]  svsampling  \n",
-       "1        [-0.30600104, 1.1881001, 0.8500203, 7.6858444]  svsampling  \n",
-       "2        [0.13439833, 0.54848653, 1.3802226, 5.3254786]  svsampling  \n",
-       "3     [0.16461116, -0.077765256, -0.7361093, 12.1213...  svsampling  \n",
-       "4           [-0.5390133, 1.4203396, 2.948345, 5.008343]  svsampling  \n",
-       "...                                                 ...         ...  \n",
-       "3733  [0.041868935645878076, -0.04394437402128172, -...      syntax  \n",
-       "3734  [0.11819464399959015, 0.058800764092091236, 0....      syntax  \n",
-       "3735  [0.1288646405127117, 0.1445384307001051, 0.293...      syntax  \n",
-       "3736  [0.11519224832480825, 0.0924940265072175, -0.0...      syntax  \n",
-       "3737  [0.12952572043228658, 0.21844777373972638, 0.0...      syntax  \n",
+       "                                            explanation   algorithm  n_token  \n",
+       "0     [-1.4712268, -0.89945465, 0.36907044, -1.5608546]  svsampling        5  \n",
+       "1     [-0.96523803, -0.6508136, 0.07779602, -0.12909...  svsampling        7  \n",
+       "2     [-0.8556219, -0.2594735, -0.18704407, -0.40751...  svsampling        6  \n",
+       "3     [-0.56217575, -0.6185286, -0.37080443, -0.0807...  svsampling        7  \n",
+       "4     [-0.69703627, -0.8620669, -0.5382457, -1.1627676]  svsampling        5  \n",
+       "...                                                 ...         ...      ...  \n",
+       "3199  [0.1733647529316892, 0.04061554155962106, -0.0...      syntax        7  \n",
+       "3200  [-0.20917350576438654, -0.49107935620356624, -...      syntax        4  \n",
+       "3201  [0.07411319335176675, -0.03953009075144326, 0....      syntax        5  \n",
+       "3202  [-0.043608159481715016, 0.12664847689797767, 0...      syntax        7  \n",
+       "3203  [0.3255281651227965, 0.06137447188101971, 0.08...      syntax        6  \n",
        "\n",
-       "[3738 rows x 6 columns]"
+       "[3204 rows x 7 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,6 +330,27 @@
     "# Concatenate all dataframes in the list\n",
     "df_explanation = pd.concat(df_list, ignore_index=True)\n",
     "df_explanation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-0.59555407,  0.03252101,  0.24474003,  0.67945228])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df_explanation[df_explanation.algorithm==\"syntax\"].reset_index(drop=True)\n",
+    "df['explanation'][0]"
    ]
   },
   {
